[gd_scene load_steps=24 format=3 uid="uid://cmuytj83v71ok"]

[ext_resource type="Script" uid="uid://curnggefttx6x" path="res://Game/_game.gd" id="1_7gi1t"]
[ext_resource type="Script" uid="uid://rarfh871whjk" path="res://Game/game.gd" id="1_7raqb"]
[ext_resource type="Texture2D" uid="uid://c1n0jcqqkxwlr" path="res://assets/art/Vinyl_Player_Spritesheet.png" id="1_kul4i"]
[ext_resource type="Script" uid="uid://xd1adtyveadv" path="res://Game/vinyl_player.gd" id="2_kul4i"]
[ext_resource type="AudioStream" uid="uid://dargbiosdvw7j" path="res://assets/music/1/Base.wav" id="3_buohc"]
[ext_resource type="Script" uid="uid://n2up8pxmptqx" path="res://addons/rhythm_notifier/rhythm_notifier.gd" id="3_jcm6v"]
[ext_resource type="AudioStream" uid="uid://dl1da220uiuxx" path="res://assets/music/1/Melody.wav" id="3_qmv3x"]
[ext_resource type="PackedScene" uid="uid://bg4shy3d8638j" path="res://Game/audio_visualizer.tscn" id="4_7gi1t"]
[ext_resource type="AudioStream" uid="uid://cw1hh66wg27dv" path="res://assets/music/1/Drum_Machine.wav" id="4_oomkl"]
[ext_resource type="Script" uid="uid://lw871uxyccy5" path="res://Game/red_line.gd" id="5_72g0p"]
[ext_resource type="AudioStream" uid="uid://c1jnqravtvx6s" path="res://assets/music/1/Chords.wav" id="5_buohc"]
[ext_resource type="Script" uid="uid://nxgcqgtxk7kb" path="res://Game/note_paper.gd" id="5_fsxsm"]
[ext_resource type="Texture2D" uid="uid://fcl57t2emh7r" path="res://assets/art/Perfect_Nice_Good.png" id="6_4lqr4"]
[ext_resource type="Texture2D" uid="uid://bgb2d08ufjgsu" path="res://assets/art/Hypetexts.png" id="12_glinl"]

[sub_resource type="Animation" id="Animation_kul4i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_buohc"]
resource_name = "spin"
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 3.14159, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7gi1t"]
_data = {
&"RESET": SubResource("Animation_kul4i"),
&"spin": SubResource("Animation_buohc")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_qlwvw"]
atlas = ExtResource("6_4lqr4")
region = Rect2(0, 0, 520, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpdke"]
atlas = ExtResource("6_4lqr4")
region = Rect2(520, 0, 520, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_33n3b"]
atlas = ExtResource("6_4lqr4")
region = Rect2(1040, 0, 520, 140)

[sub_resource type="Curve" id="Curve_4lqr4"]
_limits = [-200.0, 200.0, 0.0, 1.0]
_data = [Vector2(0, 48.4736), 0.0, 0.0, 0, 0, Vector2(0.681159, -30.8973), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_qlwvw"]
offsets = PackedFloat32Array(0, 0.889175, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0.996546, 1, 1, 1, 0)

[sub_resource type="Curve" id="Curve_rpdke"]
_limits = [-1.0, 1.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.990338, 0.0619797), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7gi1t")
track_color_1 = Color(0.345493, 0.700236, 0.906517, 1)
track_color_2 = Color(0.73072, 0.261572, 0.687961, 1)
track_color_3 = Color(0.335307, 0.70166, 0.325744, 1)
track_color_4 = Color(0.670096, 0.541315, 0.133905, 1)
track_color_5 = Color(0.926679, 0.278202, 0.30634, 1)

[node name="VinylPlayer" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("1_kul4i")
region_enabled = true
region_rect = Rect2(0, 0, 960, 616)
script = ExtResource("2_kul4i")

[node name="AudioVisualizer" parent="VinylPlayer" instance=ExtResource("4_7gi1t")]
offset_left = 356.0
offset_top = 183.0
offset_right = -596.0
offset_bottom = -385.0

[node name="Display" type="Sprite2D" parent="VinylPlayer"]
texture = ExtResource("1_kul4i")
region_enabled = true
region_rect = Rect2(7680, 0, 960, 616)

[node name="Disc" type="Sprite2D" parent="VinylPlayer"]
unique_name_in_owner = true
texture = ExtResource("1_kul4i")
region_enabled = true
region_rect = Rect2(960, 0, 960, 616)

[node name="Spinner" type="AnimationPlayer" parent="VinylPlayer/Disc"]
libraries = {
&"": SubResource("AnimationLibrary_7gi1t")
}
autoplay = "spin"

[node name="Track1" type="Sprite2D" parent="VinylPlayer/Disc"]
visible = false
texture = ExtResource("1_kul4i")
hframes = 5
region_enabled = true
region_rect = Rect2(1920, 0, 4800, 616)

[node name="Track2" type="Sprite2D" parent="VinylPlayer/Disc"]
visible = false
texture = ExtResource("1_kul4i")
hframes = 5
frame = 1
region_enabled = true
region_rect = Rect2(1920, 0, 4800, 616)

[node name="Track3" type="Sprite2D" parent="VinylPlayer/Disc"]
visible = false
texture = ExtResource("1_kul4i")
hframes = 5
frame = 2
region_enabled = true
region_rect = Rect2(1920, 0, 4800, 616)

[node name="Track4" type="Sprite2D" parent="VinylPlayer/Disc"]
visible = false
texture = ExtResource("1_kul4i")
hframes = 5
frame = 3
region_enabled = true
region_rect = Rect2(1920, 0, 4800, 616)

[node name="Track5" type="Sprite2D" parent="VinylPlayer/Disc"]
visible = false
texture = ExtResource("1_kul4i")
hframes = 5
frame = 4
region_enabled = true
region_rect = Rect2(1920, 0, 4800, 616)

[node name="Needle" type="Sprite2D" parent="VinylPlayer"]
position = Vector2(333, -207)
rotation = -0.355444
texture = ExtResource("1_kul4i")
centered = false
offset = Vector2(-800, -100)
region_enabled = true
region_rect = Rect2(6720, 0, 960, 616)

[node name="RedLine" type="Sprite2D" parent="VinylPlayer"]
unique_name_in_owner = true
texture = ExtResource("1_kul4i")
region_enabled = true
region_rect = Rect2(8640, 0, 960, 616)
script = ExtResource("5_72g0p")
textures = Array[Texture2D]([SubResource("AtlasTexture_qlwvw"), SubResource("AtlasTexture_rpdke"), SubResource("AtlasTexture_33n3b")])

[node name="CPUParticles2D" type="CPUParticles2D" parent="VinylPlayer/RedLine"]
position = Vector2(-83, 47)
emitting = false
amount = 1
texture = ExtResource("12_glinl")
one_shot = true
lifetime_randomness = 0.05
direction = Vector2(-1, -2)
spread = 29.31
gravity = Vector2(0, 0)
initial_velocity_min = 59.63
initial_velocity_max = 123.85
angular_velocity_min = -46.25
angular_velocity_max = 51.79
linear_accel_min = 2.75
linear_accel_max = 17.43
linear_accel_curve = SubResource("Curve_4lqr4")
radial_accel_min = -29.36
radial_accel_max = 10.09
tangential_accel_min = -47.71
tangential_accel_max = 47.71
angle_min = 19.8
angle_max = 66.1
scale_amount_min = 0.25
scale_amount_max = 0.25
color = Color(1, 0.321569, 1, 1)
color_ramp = SubResource("Gradient_qlwvw")
hue_variation_min = -0.1
hue_variation_max = 0.1
hue_variation_curve = SubResource("Curve_rpdke")

[node name="NotePaper" type="Label" parent="."]
layout_mode = 0
offset_left = -467.0
offset_top = 70.0
offset_right = -467.0
offset_bottom = 70.0
text = "012341"
script = ExtResource("5_fsxsm")

[node name="GameControler" type="Node2D" parent="."]
script = ExtResource("1_7raqb")
beat_count = 32
song_beat_count = 16
miss_time = 0.3
perfect_time = 0.05
nice_time = 0.2

[node name="Base" type="AudioStreamPlayer" parent="GameControler"]
stream = ExtResource("3_buohc")
volume_db = -16.278
bus = &"Music"

[node name="1" type="AudioStreamPlayer" parent="GameControler"]
stream = ExtResource("3_buohc")
volume_db = -5.878
bus = &"1"

[node name="2" type="AudioStreamPlayer" parent="GameControler"]
stream = ExtResource("3_qmv3x")
bus = &"2"

[node name="3" type="AudioStreamPlayer" parent="GameControler"]
stream = ExtResource("4_oomkl")
bus = &"3"

[node name="4" type="AudioStreamPlayer" parent="GameControler"]
stream = ExtResource("5_buohc")
bus = &"4"

[node name="5" type="AudioStreamPlayer" parent="GameControler"]
bus = &"5"

[node name="RhythmNotifier" type="Node" parent="GameControler" node_paths=PackedStringArray("audio_stream_player")]
script = ExtResource("3_jcm6v")
bpm = 240.0
beat_length = 0.25
audio_stream_player = NodePath("../Base")
metadata/_custom_type_script = "uid://n2up8pxmptqx"

[node name="Note_Spawns" type="Node2D" parent="."]
rotation = 1.00691

[node name="Note_Spawn_location_1" type="Node2D" parent="Note_Spawns"]
unique_name_in_owner = true
position = Vector2(0, 95)

[node name="Note_Spawn_location_2" type="Node2D" parent="Note_Spawns"]
unique_name_in_owner = true
position = Vector2(0, 148)
rotation = -0.00464491

[node name="Note_Spawn_location_3" type="Node2D" parent="Note_Spawns"]
unique_name_in_owner = true
position = Vector2(0, 184)
rotation = -0.00464491

[node name="Note_Spawn_location_4" type="Node2D" parent="Note_Spawns"]
unique_name_in_owner = true
position = Vector2(0, 206)
rotation = -0.00464491

[node name="Note_Spawn_location_5" type="Node2D" parent="Note_Spawns"]
unique_name_in_owner = true
position = Vector2(0, 232)
rotation = -0.00464491
